syntax = "proto3";

enum NetworkEvent {
    UpdateNetworkType = 0;
}
